--- a/app/templates/_speech_edit_modal.html
+++ b/app/templates/_speech_edit_modal.html
@@ -68,10 +68,10 @@
       </div>
 
       <div class="form-group">
-        <label for="edit-media-url">Media URL:</label>
+        <label for="edit-speech-media-url">Media URL:</label>
         <input
           type="text"
-          id="edit-media-url"
+          id="edit-speech-media-url"
           name="media_url"
           placeholder="e.g., https://youtu.be/..."
         />
