--- a/app/templates/_speech_edit_modal.html
+++ b/app/templates/_speech_edit_modal.html
@@ -19,7 +19,7 @@
         />
       </div>
 
-      <div class="form-group-row">
+      <div class="form-group-row" id="pathway-generic-row">
         <div class="form-group" style="flex-grow: 3">
           <label for="edit-pathway" id="label-pathway-series">Pathway:</label>
           <select
