feat(settings/contacts): make contacts and setting tables sortable and searchable.

--- a/app/static/css/responsive.css
+++ b/app/static/css/responsive.css
@@ -318,4 +318,11 @@
         flex-direction: column;
         width: 100%;
     }
+   
+    /* --- Settings Pag Respoensive Fixes --- */
+    
+    .global-search-bar {
+    width: 100%; /* Full width on mobile */
+    min-width: unset;
+  }
 }
