--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -6,7 +6,7 @@ content %}
     <input
       type="text"
       id="searchInput"
-      placeholder="Search by name..."
+      placeholder="Search all columns..."
       class="search-box"
     />
     <button
@@ -32,17 +32,15 @@ content %}
 <table id="contactsTable">
   <thead>
     <tr>
-      <th>No.</th>
-      <th>Name</th>
-      <th>Type</th>
-      <th>Club</th>
-      <th>Working Path</th>
-      <th>Next Project</th>
-      <th>Completed Levels</th>
-      <th>Date Created</th>
-      {% if session.get('user_role') in ['Admin', 'VPE', 'Officer','Meeting
-      Manager'] %}
-      <th>Actions</th>
+      <th class="sortable" data-column-index="0">No.</th>
+      <th class="sortable" data-column-index="1">Name</th>
+      <th class="sortable" data-column-index="2">Type</th>
+      <th class="sortable" data-column-index="3">Club</th>
+      <th class="sortable" data-column-index="4">Working Path</th>
+      <th class="sortable" data-column-index="5">Next Project</th>
+      <th class="sortable" data-column-index="6">Completed Levels</th>
+      {% if is_authorized(session.get('user_role'), 'CONTACT_BOOK_EDIT') %}
+      <th data-column-index="7">Actions</th>
       {% endif %}
     </tr>
   </thead>
@@ -60,12 +58,7 @@ content %}
       <td>{{ contact.Working_Path }}</td>
       <td>{{ contact.Next_Project }}</td>
       <td>{{ contact.Completed_Levels }}</td>
-      <td>
-        {{ contact.Date_Created.strftime('%Y-%m-%d') if contact.Date_Created
-        else '' }}
-      </td>
-      {% if session.get('user_role') in ['Admin', 'VPE', 'Officer','Meeting
-      Manager'] %}
+      {% if is_authorized(session.get('user_role'), 'CONTACT_BOOK_EDIT') %}
       <td>
         <div class="action-links">
           <button
@@ -91,14 +84,6 @@ content %}
 </table>
 
 {% include '_contact_modal.html' %}
+<script src="{{ url_for('static', filename='js/contacts.js') }}"></script>
 
-<script>
-  const contactModal = document.getElementById("contactModal");
-  const contactForm = document.getElementById("contactForm");
-  const contactModalTitle = document.getElementById("contactModalTitle");
-
-  document.addEventListener("DOMContentLoaded", function () {
-    setupSearch("searchInput", "#contactsTable", "tbody tr", "td:nth-child(2)");
-  });
-</script>
 {% endblock %}
