--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -408,3 +408,26 @@ h1 {
         border-bottom: none;
     }
 }
+
+/* Waitlist styles */
+.waitlist-info {
+    font-size: 0.8em;
+    color: #555;
+    margin-top: 5px;
+}
+
+.waitlist-info i {
+    margin-right: 5px;
+}
+
+.waitlist-users {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: inline;
+}
+
+.waitlist-users li {
+    display: inline;
+    margin-right: 5px;
+}
