--- a/app/static/css/responsive.css
+++ b/app/static/css/responsive.css
@@ -325,4 +325,11 @@
     width: 100%; /* Full width on mobile */
     min-width: unset;
   }
+
+    .booking-table .waitlist-info {
+        flex-basis: 100%;
+        text-align: left;
+        margin-top: 5px;
+        padding: 0 15px;
+    }
 }
