--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -118,6 +118,7 @@
         <thead>
             <tr>
                 <th>Role</th>
+                <th></th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -134,18 +135,7 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="role-cell-actions">
-                        {% if role.waitlist %}
-                        <div class="waitlist-info">
-                            <span style="font-size:0.5em;">Waitlist:</span>
-                            <ul class="waitlist-users">
-                                {% for user in role.waitlist %}
-                                <li><i class="fas fa-user"></i> {{ user.name }}</li>
-                                {% endfor %}
-                            </ul>
-                        </div>
-                        {% endif %}
-                        {% if is_admin_view and role.owner_id and role.award_category %}
+                    <div class="role-cell-actions">                        {% if is_admin_view and role.owner_id and role.award_category %}
                             {% if role.award_type %}
                                 <button type="button" class="icon-btn icon-btn-voted" 
                                         title="Cancel Vote ({{ role.award_type }})" 
@@ -177,6 +167,18 @@
                             {% endif %}
                         {% endif %}
                     </div>
+                </td>
+                <td class="waitlist-cell">
+                    {% if role.waitlist %}
+                    <div class="waitlist-info">
+                        <span style="font-size:0.5em;">Waitlist:</span>
+                        <ul class="waitlist-users">
+                            {% for user in role.waitlist %}
+                            <li><i class="fas fa-user"></i> {{ user.name }}</li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+                    {% endif %}
                 </td>
                 <td class="action-cell">
                     {% if is_admin_view %}
@@ -210,6 +212,7 @@
             </tr>
             {% endfor %}
         </tbody>
+
     </table>
     
 </div>
