--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -135,36 +135,30 @@
                             {% endif %}
                         </div>
                     </div>
-                    <div class="role-cell-actions">                        {% if is_admin_view and role.owner_id and role.award_category %}
-                            {% if role.award_type %}
-                                <button type="button" class="icon-btn icon-btn-voted" 
-                                        title="Cancel Vote ({{ role.award_type }})" 
-                                        onclick="handleVoteClick(this)"
-                                        data-meeting-number="{{ selected_meeting_number }}"
-                                        data-contact-id="{{ role.owner_id }}"
-                                        data-award-category="{{ role.award_category }}">
+                    <div class="role-cell-actions">
+                        {# Show trophy for everyone if an award is given #}
+                        {% if role.award_type %}
+                            {% if is_admin_view %}
+                                {# Admins get a clickable button to cancel the vote #}
+                                <button type="button" class="icon-btn icon-btn-voted" title="Cancel Vote ({{ role.award_type }})" onclick="handleVoteClick(this)" data-meeting-number="{{ selected_meeting_number }}" data-contact-id="{{ role.owner_id }}" data-award-category="{{ role.award_category }}">
                                     <i class="fas fa-trophy"></i>
                                 </button>
-                            {% elif role.award_category_open %}
-                                <button type="button" class="icon-btn" 
-                                        title="Vote"
-                                        onclick="handleVoteClick(this)"
-                                        data-meeting-number="{{ selected_meeting_number }}"
-                                        data-contact-id="{{ role.owner_id }}"
-                                        data-award-category="{{ role.award_category }}">
-                                    <i class="fas fa-vote-yea"></i>
-                                </button>
                             {% else %}
-                                <button type="button" class="icon-btn" 
-                                        title="Vote"
-                                        onclick="handleVoteClick(this)"
-                                        data-meeting-number="{{ selected_meeting_number }}"
-                                        data-contact-id="{{ role.owner_id }}"
-                                        data-award-category="{{ role.award_category }}"
-                                        style="display: none;"> {# <-- THE FIX #}
-                                    <i class="fas fa-vote-yea"></i>
-                                </button>
+                                {# Normal users see a static, non-clickable trophy icon #}
+                                <span class="icon-btn icon-btn-voted" title="{{ role.award_type }} Winner">
+                                    <i class="fas fa-trophy"></i>
+                                </span>
                             {% endif %}
+                        {# Show voting button only for admins if the category is open for voting #}
+                        {% elif is_admin_view and role.owner_id and role.award_category_open %}
+                            <button type="button" class="icon-btn" title="Vote" onclick="handleVoteClick(this)" data-meeting-number="{{ selected_meeting_number }}" data-contact-id="{{ role.owner_id }}" data-award-category="{{ role.award_category }}">
+                                <i class="fas fa-vote-yea"></i>
+                            </button>
+                        {# This is a hidden button for admins, used by JS to show if another vote is cancelled #}
+                        {% elif is_admin_view and role.owner_id and role.award_category %}
+                             <button type="button" class="icon-btn" title="Vote" onclick="handleVoteClick(this)" data-meeting-number="{{ selected_meeting_number }}" data-contact-id="{{ role.owner_id }}" data-award-category="{{ role.award_category }}" style="display: none;">
+                                <i class="fas fa-vote-yea"></i>
+                            </button>
                         {% endif %}
                     </div>
                 </td>
