fix(agenda): make some improvements to agenda
Squashed commit of the following:

commit 697f585630f3c521d3847db3c412071260acd757
Author: Kyle Wei <kylewei@gmail.com>
Date:   Fri Nov 14 00:14:11 2025 +0800

    fix the error that prevent saving changes by modals

commit ce38a56f13cc4feaf7b85ba112135fb56efdeb54
Author: Kyle Wei <kylewei@gmail.com>
Date:   Fri Nov 14 00:01:17 2025 +0800

    correct the designation of DTM

commit 360313f28340dcf1852b3ea7d7a74955e74ded6d
Author: Kyle Wei <kylewei@gmail.com>
Date:   Thu Nov 13 23:52:35 2025 +0800

    add project support to table topics

commit 508540e84ed64aa356a82d909cd5d73b60893b86
Author: Kyle Wei <kylewei@gmail.com>
Date:   Thu Nov 13 23:05:39 2025 +0800

    add project support to the individual evalutor session

commit 011133614f5cccdff340fa5467469af788c75196
Author: Kyle Wei <kylewei@gmail.com>
Date:   Thu Nov 13 22:51:19 2025 +0800

    consolidate project ane role-edit buttons

commit 3c00395ca17444a240ce3fd84c6741b38bea6509
Author: Kyle Wei <kylewei@gmail.com>
Date:   Thu Nov 13 22:01:15 2025 +0800

    speech up the agenda loading

commit ced39f2ae54bda0d2d25a7e60620906c1bd0d425
Author: Kyle Wei <kylewei@gmail.com>
Date:   Thu Nov 13 17:01:38 2025 +0800

    create a README file

commit 3cc6f4be978bbe7aa3b354fe4272231181765b30
Author: Kyle Wei <kylewei@gmail.com>
Date:   Thu Nov 13 16:55:27 2025 +0800

    move SERIES_INITIALS to config.py

commit 7219096c4ffbd35de9d39d95d0389da10393d2f7
Author: Kyle Wei <kylewei@SHLTMC-AIR.local>
Date:   Thu Nov 13 16:50:34 2025 +0800

    specify required or elective in the export speech objectives

--- a/app/static/css/agenda.css
+++ b/app/static/css/agenda.css
@@ -122,6 +122,11 @@
     display: none; /* Hide ALL view-mode elements */
 }
 
+.edit-mode-active .agenda-header-logo,
+.edit-mode-active .video-icon-btn {
+    display: none;
+}
+
 /* Show the edit-mode container */
 .edit-mode-active .meeting-edit-details {
     display: block;
@@ -394,6 +399,18 @@
 
 /* --- Responsive adjustment for small screens --- */
 @media (max-width: 600px) {
+    .action-bar {
+        flex-direction: column;
+        align-items: stretch; /* Make left and right take full width */
+        gap: 15px;
+    }
+
+    .action-bar-left {
+        flex-direction: column;
+        align-items: flex-start; /* Align items within this group to the start */
+        width: 100%; /* Take full width */
+    }
+
     .agenda-header-container {
         flex-direction: column;
         align-items: center;
